# IOTrash

./: .envrc  .gitignore  CLAUDE.md  PLAN.md  README.md  SECURITY.md
docs/: firmware.md
gateway/: .env.example  Cargo.toml  build.rs  sdkconfig.defaults
gateway/.cargo/: config.toml
gateway/src/: api.rs  lora.rs  main.rs  mock.rs  packet.rs  wifi.rs
miner/: Cargo.toml  sdkconfig.defaults
miner/.cargo/: config.toml
miner/src/: main.rs  miner.rs  wifi.rs
node/: Cargo.toml  README.md  build.rs  sdkconfig.defaults
node/src/: dht.rs  dust.rs  lora.rs  main.rs  packet.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
